Wayland clamps cursor movement failes with gnome-shell (fixed up-stream) #98793

Closed
opened 2022-06-11 14:36:18 +02:00 by Caden Mitchell · 10 comments

System Information
Operating system: Fedora 36 GNOME (on Wayland)
Graphics card: AMD Radeon RX 5700 XT

Blender Version
Broken: 3.3.0 alpha, 38bfa53081, master, 2022-06-09
Worked: 3.3.0 alpha, e90ba74d3e, master, 2022-06-05

Short description of error
On Gnome-shell with Blender compiled with "WITH_GHOST_WAYLAND", the cursor get's locked to a portion of the screen when trying to resize panels. It also has a similar behavior with sculpting and weight painting, similar to #98714.

Exact steps for others to reproduce the error
Compile with Wayland, then, try to resize the panels vertically, in the Shading tab for instance.


NOTE: this was a bug in gnome-shell which has since been fixed: https://gitlab.gnome.org/GNOME/mutter/-/issues/2110

    As this impacts gnome-42 we may still need to workaround the bug.
**System Information** Operating system: Fedora 36 GNOME (on Wayland) Graphics card: AMD Radeon RX 5700 XT **Blender Version** Broken: 3.3.0 alpha, 38bfa53081e9, master, 2022-06-09 Worked: 3.3.0 alpha, e90ba74d3eb8, master, 2022-06-05 **Short description of error** On Gnome-shell with Blender compiled with "WITH_GHOST_WAYLAND", the cursor get's locked to a portion of the screen when trying to resize panels. It also has a similar behavior with sculpting and weight painting, similar to #98714. **Exact steps for others to reproduce the error** Compile with Wayland, then, try to resize the panels vertically, in the Shading tab for instance. ---- NOTE: this was a bug in gnome-shell which has since been fixed: https://gitlab.gnome.org/GNOME/mutter/-/issues/2110 ``` As this impacts gnome-42 we may still need to workaround the bug.
Author

Added subscriber: @Caden-Mitchell

Added subscriber: @Caden-Mitchell

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Some notes on this issue:

  • Previously when this worked, grabbing the pointer would always lock it's position, now the cursor is confined to the surface, the problem is exposed.
  • This is only an issue in gnome-shell, the bug should be fixed up-stream (it works in KDE for example).
  • This bug only impacts UI scale other than 1.

This bug has been reported to Gnome: https://gitlab.gnome.org/GNOME/mutter/-/issues/2110

Some notes on this issue: - Previously when this worked, grabbing the pointer would always lock it's position, now the cursor is confined to the surface, the problem is exposed. - This is only an issue in gnome-shell, the bug should be fixed up-stream (it works in KDE for example). - This bug only impacts UI scale other than 1. ---- This bug has been reported to Gnome: https://gitlab.gnome.org/GNOME/mutter/-/issues/2110
Campbell Barton changed title from Wayland build clamps cursor movement to GNOME/Shell + wayland clamps cursor movement (confining cursor to the window fails with gnome-shell) 2022-06-12 04:29:42 +02:00
Campbell Barton changed title from GNOME/Shell + wayland clamps cursor movement (confining cursor to the window fails with gnome-shell) to Wayland clamps cursor movement (confining cursor to the window fails with gnome-shell) 2022-06-12 04:31:08 +02:00
Author

In #98793#1373022, @ideasman42 wrote:
Some notes on this issue:

  • Previously when this worked, grabbing the pointer would always lock it's position, now the cursor is confined to the surface, the problem is exposed.
  • This is only an issue in gnome-shell, the bug should be fixed up-stream (it works in KDE for example).
  • This bug only impacts UI scale other than 1.

This bug has been reported to Gnome: https://gitlab.gnome.org/GNOME/mutter/-/issues/2110

Indeed, my screen scale is 300%. This is because not only is my display 4K, but it is also a TV, meaning the UI needs to be slightly larger than usual. 300% scaling also seems to have other unintended side-effects in the current version of Gnome-shell and Mutter than Fedora 36 ships. Here is a relevant Gnome Shell issue .

> In #98793#1373022, @ideasman42 wrote: > Some notes on this issue: > > - Previously when this worked, grabbing the pointer would always lock it's position, now the cursor is confined to the surface, the problem is exposed. > - This is only an issue in gnome-shell, the bug should be fixed up-stream (it works in KDE for example). > - This bug only impacts UI scale other than 1. > > ---- > > This bug has been reported to Gnome: https://gitlab.gnome.org/GNOME/mutter/-/issues/2110 Indeed, my screen scale is 300%. This is because not only is my display 4K, but it is also a TV, meaning the UI needs to be slightly larger than usual. 300% scaling also seems to have other unintended side-effects in the current version of Gnome-shell and Mutter than Fedora 36 ships. Here is a relevant Gnome Shell [issue ](https://gitlab.gnome.org/GNOME/gnome-shell/-/issues/5500).

Note that we could workaround this by using a software cursor (as is done for cursor warping) and confine the cursor to the window ourselves, this may be the best option short term. This would only need to be done when using gnome-shell with a scaled UI.

Note that we could workaround this by using a software cursor (as is done for cursor warping) and confine the cursor to the window ourselves, this may be the best option short term. This would only need to be done when using gnome-shell with a scaled UI.
Author

In #98793#1373450, @ideasman42 wrote:
Note that we could workaround this by using a software cursor (as is done for cursor warping) and confine the cursor to the window ourselves, this may be the best option short term. This would only need to be done when using gnome-shell with a scaled UI.

That sounds like it may be a good option. Perhaps it could also be placed under "Developer Extras" or something? Who knows, may be interesting to test it on other Wayland desktops for debugging.

> In #98793#1373450, @ideasman42 wrote: > Note that we could workaround this by using a software cursor (as is done for cursor warping) and confine the cursor to the window ourselves, this may be the best option short term. This would only need to be done when using gnome-shell with a scaled UI. That sounds like it may be a good option. Perhaps it could also be placed under "Developer Extras" or something? Who knows, may be interesting to test it on other Wayland desktops for debugging.
Campbell Barton changed title from Wayland clamps cursor movement (confining cursor to the window fails with gnome-shell) to Wayland clamps cursor movement failes with gnome-shell (fixed up-stream) 2022-06-16 06:07:38 +02:00
Author

I'd like to add, running the X11 version of Blender on Wayland works perfectly fine. However, Blender runs somewhat slower this way, compared to running it as a native Wayland app.

I'd like to add, running the X11 version of Blender on Wayland works perfectly fine. However, Blender runs somewhat slower this way, compared to running it as a native Wayland app.

This issue was referenced by 35b2b9b6e6

This issue was referenced by 35b2b9b6e6079902d78602afce10e2e3bb9e6b40

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-06-18 07:08:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98793
No description provided.