intern/ghost/intern/GHOST_Window.cpp
@@ -164,7 +164,8 @@ GHOST_TSuccess GHOST_Window::getCursorGrabBounds(GHOST_Rect &bounds)
 
 void GHOST_Window::getCursorGrabState(GHOST_TGrabCursorMode &mode,
                                       GHOST_TAxisFlag &wrap_axis,
-                                      GHOST_Rect &bounds)
+                                      GHOST_Rect &bounds,
+                                      bool &use_software_cursor)
 {
   mode = m_cursorGrab;
   if (m_cursorGrab == GHOST_kGrabWrap) {
@@ -178,6 +179,14 @@ void GHOST_Window::getCursorGrabState(GHOST_TGrabCursorMode &mode,
     bounds.m_b = -1;
     wrap_axis = GHOST_kGrabAxisNone;
   }
+  use_software_cursor = (m_cursorGrab != GHOST_kGrabDisable) ? getCursorGrabUseSoftwareDisplay() :
+                                                               false;
+}
+
+bool GHOST_Window::getCursorGrabUseSoftwareDisplay()
+{
+  /* Sub-classes may override, by default don't use software cursor. */
+  return false;
 }
 
 GHOST_TSuccess GHOST_Window::setCursorShape(GHOST_TStandardCursor cursorShape)
